--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My first github repo.</title>
 </head>
 <body>
-    
+    <h3>my first time</h3>
+    <h2>nice to meet you </h2>
+    <h3>fucka khabo</h3>
 </body>
 </html>
